Fix alignment of header elements by putting in a container

--- a/css/style.css
+++ b/css/style.css
@@ -6563,10 +6563,7 @@ table .checkbox input[type="checkbox"] {
   margin-top: 0;
   max-width: 100%;
 }
-.navbar.container > .container {
-  width: 100%;
-}
-.navbar.container > .container .navbar-brand {
+.navbar.container .navbar-brand {
   margin-left: 0;
 }
 .navbar-default {
@@ -6606,52 +6603,116 @@ table .checkbox input[type="checkbox"] {
   padding: 0;
   margin: 0;
 }
-.navbar-default .navbar-nav {
+.navbar-default .primary-nav {
   background-color: #0b5e88;
   width: 100%;
   font-size: 18px;
   margin: 0;
+  float: left;
 }
-.navbar-default .navbar-nav > .leaf > a,
-.navbar-default .navbar-nav > .leaf > a:hover,
-.navbar-default .navbar-nav > .leaf > a:focus {
+.navbar-default .primary-nav .navbar-nav {
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  float: none;
+}
+.navbar-default .primary-nav .navbar-nav:before,
+.navbar-default .primary-nav .navbar-nav:after {
+  content: " ";
+  display: table;
+}
+.navbar-default .primary-nav .navbar-nav:after {
+  clear: both;
+}
+.navbar-default .primary-nav .navbar-nav:before,
+.navbar-default .primary-nav .navbar-nav:after {
+  content: " ";
+  display: table;
+}
+.navbar-default .primary-nav .navbar-nav:after {
+  clear: both;
+}
+@media (min-width: 768px) {
+  .navbar-default .primary-nav .navbar-nav {
+    width: 750px;
+  }
+}
+@media (min-width: 992px) {
+  .navbar-default .primary-nav .navbar-nav {
+    width: 970px;
+  }
+}
+@media (min-width: 1200px) {
+  .navbar-default .primary-nav .navbar-nav {
+    width: 1170px;
+  }
+}
+.navbar-default .primary-nav .navbar-nav > .leaf > a,
+.navbar-default .primary-nav .navbar-nav > .leaf > a:hover,
+.navbar-default .primary-nav .navbar-nav > .leaf > a:focus {
   color: white;
   background-color: #0b5e88;
   font-weight: bold;
 }
-.navbar-default .navbar-nav > .active > a,
-.navbar-default .navbar-nav > .active > a:hover,
-.navbar-default .navbar-nav > .active > a:focus {
+.navbar-default .primary-nav .navbar-nav > .active > a,
+.navbar-default .primary-nav .navbar-nav > .active > a:hover,
+.navbar-default .primary-nav .navbar-nav > .active > a:focus {
   color: white;
   background-color: #444444;
   font-weight: bold;
 }
 .navbar-default .navbar-header {
-  margin: 0;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  float: none;
   padding-bottom: 30px;
+}
+.navbar-default .navbar-header:before,
+.navbar-default .navbar-header:after {
+  content: " ";
+  display: table;
+}
+.navbar-default .navbar-header:after {
+  clear: both;
+}
+.navbar-default .navbar-header:before,
+.navbar-default .navbar-header:after {
+  content: " ";
+  display: table;
+}
+.navbar-default .navbar-header:after {
+  clear: both;
+}
+@media (min-width: 768px) {
+  .navbar-default .navbar-header {
+    width: 750px;
+  }
+}
+@media (min-width: 992px) {
+  .navbar-default .navbar-header {
+    width: 970px;
+  }
+}
+@media (min-width: 1200px) {
+  .navbar-default .navbar-header {
+    width: 1170px;
+  }
 }
 .navbar-default .navbar-header .logo {
   max-width: 35%;
-  padding-left: 15px;
+  padding-left: 0;
 }
 @media (min-width: 480px) {
   .navbar-default .navbar-header .logo {
     width: 180px;
-    padding-left: 15px;
     padding-right: 30px;
   }
 }
 .navbar-default .navbar-header .logo img {
   width: 100%;
-}
-.navbar-default .navbar-header-name {
-  display: inline-block;
-  max-width: 50%;
-}
-@media (min-width: 768px) {
-  .navbar-default .navbar-header-name {
-    max-width: 80%;
-  }
 }
 .front .region-header {
   /* The focus point of this image is a man's face at the 70% / 70% place */
